--- a/index.html
+++ b/index.html
@@ -1,1 +1,89 @@
-<h1>Hello</h1>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>My Website</title>
+
+  <!-- SEO + Social (edit) -->
+  <meta name="description" content="A simple starter website." />
+  <meta property="og:title" content="My Website" />
+  <meta property="og:description" content="A simple starter website." />
+
+  <!-- Styles -->
+  <link rel="stylesheet" href="styles.css" />
+
+  <!-- Fallback for older browsers -->
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+</head>
+<body>
+  <header class="site-header">
+    <div class="container">
+      <a class="brand" href="/">MyWebsite</a>
+      <nav class="nav" aria-label="Main navigation">
+        <a href="#about">About</a>
+        <a href="#features">Features</a>
+        <a href="#contact">Contact</a>
+      </nav>
+      <button class="menu-toggle" aria-expanded="false" aria-controls="mobile-nav">☰</button>
+    </div>
+  </header>
+
+  <main>
+    <section class="hero">
+      <div class="container">
+        <h1>Welcome — a clean starter</h1>
+        <p>Use this as a base for your project. Mobile-first, accessible and minimal.</p>
+        <a class="btn" href="#about">Get started</a>
+      </div>
+    </section>
+
+    <section id="about" class="container content">
+      <h2>About</h2>
+      <p>Short paragraph describing the project.</p>
+    </section>
+
+    <section id="features" class="container cards">
+      <article class="card">
+        <h3>Responsive</h3>
+        <p>Works on phones, tablets and desktops.</p>
+      </article>
+      <article class="card">
+        <h3>Accessible</h3>
+        <p>Keyboard / screen reader friendly basics included.</p>
+      </article>
+      <article class="card">
+        <h3>Easy to extend</h3>
+        <p>Modify CSS variables and grid to fit your design.</p>
+      </article>
+    </section>
+
+    <section id="contact" class="container content">
+      <h2>Contact</h2>
+      <form id="contact-form" novalidate>
+        <label>
+          Name
+          <input type="text" name="name" required />
+        </label>
+        <label>
+          Email
+          <input type="email" name="email" required />
+        </label>
+        <label>
+          Message
+          <textarea name="message" rows="4"></textarea>
+        </label>
+        <button class="btn" type="submit">Send</button>
+      </form>
+    </section>
+  </main>
+
+  <footer class="site-footer">
+    <div class="container">
+      <small>© <span id="year"></span> MyWebsite</small>
+    </div>
+  </footer>
+
+  <script src="script.js" defer></script>
+</body>
+</html>
