--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <main>
     <section class="hero">
       <div class="container">
-        <h1>Welcome — a clean starter</h1>
+        <h1>BE TOGETHER</h1>
         <p>Use this as a base for your project. Mobile-first, accessible and minimal.</p>
         <a class="btn" href="#about">Get started</a>
       </div>
