--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </section>
 
     <section id="about" class="container content">
-      <h2>About</h2>
+      <h2>Par mums</h2>
       <p>Short paragraph describing the project.</p>
     </section>
 
@@ -59,7 +59,7 @@
     </section>
 
     <section id="contact" class="container content">
-      <h2>Contact</h2>
+      <h2>Kontaktējies ar mums</h2>
       <form id="contact-form" novalidate>
         <label>
           Name
