--- a/about.html
+++ b/about.html
@@ -1,1 +1,13 @@
+<header>
+  <div class="logo">
+    <img src="images/logo.png" alt="BeTogether Logo">
+    <span>BeTogether</span>
+  </div>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="mission.html">Mission</a>
+    <a href="par-mums.html">Par mums</a>
+    <a href="donate.html" class="donate-btn">Donate</a>
+  </nav>
+</header>
 
