--- a/index.html
+++ b/index.html
@@ -1,77 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>BeTogether – Charity</title>
-
-  <!-- Google Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
-
-  <!-- CSS -->
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <title>BeTogether | Home</title>
+  <link rel="stylesheet" href="css/style.css">
+  <script defer src="js/script.js"></script>
 </head>
 <body>
 
-  <header>
-    <h1>BeTogether</h1>
-    <nav>
-      <a href="#about">About</a>
-      <a href="#mission">Mission</a>
-      <a href="#donate">Donate</a>
-    </nav>
-  </header>
+<header>
+  <div class="logo">
+    <img src="images/logo.png">
+    <span>BeTogether</span>
+  </div>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="mission.html">Mission</a>
+    <a href="par-mums.html">Par mums</a>
+    <a href="donate.html" class="donate-btn">Donate</a>
+  </nav>
+</header>
 
-  <section class="hero">
-    <div class="hero-text">
-      <h2>Together, we can help</h2>
-      <p>
-        BeTogether is a charity focused on kindness, unity, and making a real
-        difference in people’s lives.
-      </p>
-      <a href="#donate" class="btn">Get Involved</a>
+<section class="hero">
+  <h1>Together, we change lives</h1>
+  <p>Helping people through kindness and action.</p>
+</section>
+
+<section class="cases">
+  <h2>People We Help</h2>
+  <div class="cards">
+    <div class="case-card" onclick="openPopup('anna')">
+      <img src="images/person1.jpg">
+      <h3>Anna, 7</h3>
     </div>
 
-    <div class="hero-card">
-      <h3>Why BeTogether?</h3>
-      <p>
-        Because real change happens when people stand together and care for one another.
-      </p>
+    <div class="case-card" onclick="openPopup('mark')">
+      <img src="images/person2.jpg">
+      <h3>Mark, 12</h3>
     </div>
-  </section>
+  </div>
+</section>
 
-  <section id="mission">
-    <h2 class="section-title">Our Mission</h2>
+<!-- POPUP -->
+<div id="popup" class="popup">
+  <div class="popup-content">
+    <span class="close" onclick="closePopup()">×</span>
+    <h2 id="popupTitle"></h2>
+    <p id="popupText"></p>
+    <a href="donate.html" class="btn">Donate</a>
+  </div>
+</div>
 
-    <div class="cards">
-      <div class="card">
-        <h3>Support</h3>
-        <p>Helping communities through donations and volunteering.</p>
-      </div>
+<footer>
+  <p>© 2025 BeTogether</p>
+</footer>
 
-      <div class="card">
-        <h3>Care</h3>
-        <p>Providing help and resources where they are needed most.</p>
-      </div>
-
-      <div class="card">
-        <h3>Hope</h3>
-        <p>Creating a brighter future for everyone.</p>
-      </div>
-    </div>
-  </section>
-
-  <section id="donate">
-    <h2 class="section-title">Make an Impact</h2>
-    <p class="donate-text">Every contribution matters.</p>
-    <button id="donateBtn" class="btn">Donate Now</button>
-  </section>
-
-  <footer>
-    <p>© 2025 BeTogether. All rights reserved.</p>
-  </footer>
-
-  <!-- JavaScript -->
-  <script src="script.js"></script>
 </body>
 </html>
