--- a/par-mums.html
+++ b/par-mums.html
@@ -1,1 +1,36 @@
 
+<!DOCTYPE html>
+<html>
+<head>
+  <title>BeTogether | Par mums</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+
+<header>
+  <div class="logo">
+    <img src="images/logo.png">
+    <span>BeTogether</span>
+  </div>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="mission.html">Mission</a>
+    <a href="par-mums.html">Par mums</a>
+    <a href="donate.html" class="donate-btn">Donate</a>
+  </nav>
+</header>
+
+<section class="page">
+  <h1>Par mums</h1>
+  <p>
+    BeTogether is a charity organization built on compassion, transparency,
+    and unity. We work to ensure donations directly support those who need it most.
+  </p>
+</section>
+
+<footer>
+  <p>© 2025 BeTogether</p>
+</footer>
+
+</body>
+</html>
