Simplify mission.html content and structure

--- a/mission.html
+++ b/mission.html
@@ -1,36 +1,29 @@
-
 <!DOCTYPE html>
 <html>
 <head>
-  <title>BeTogether | Mission</title>
-  <link rel="stylesheet" href="css/style.css">
+  <title>Mission</title>
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 
 <header>
   <div class="logo">
-    <img src="images/logo.png">
+    <img src="./images/logo.png">
     <span>BeTogether</span>
   </div>
   <nav>
     <a href="index.html">Home</a>
     <a href="mission.html">Mission</a>
     <a href="par-mums.html">Par mums</a>
-    <a href="donate.html" class="donate-btn">Donate</a>
+    <a href="donate.html">Donate</a>
   </nav>
 </header>
 
 <section class="page">
   <h1>Our Mission</h1>
-  <p>
-    Our mission is to support individuals and families in need by providing
-    help, hope, and opportunity through donations and community action.
-  </p>
+  <p>We support people in need through donations and care.</p>
 </section>
 
-<footer>
-  <p>© 2025 BeTogether</p>
-</footer>
-
+<footer>© 2025 BeTogether</footer>
 </body>
 </html>
