--- a/donate.html
+++ b/donate.html
@@ -1,28 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>BeTogether | Donate</title>
-  <link rel="stylesheet" href="css/style.css">
+  <title>Donate</title>
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 
 <header>
   <div class="logo">
-    <img src="images/logo.png">
+    <img src="./images/logo.png">
     <span>BeTogether</span>
   </div>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="mission.html">Mission</a>
-    <a href="par-mums.html">Par mums</a>
-  </nav>
 </header>
 
 <section class="page">
   <h1>Donate</h1>
-  <p>Your support changes lives.</p>
 
-  <!-- PAYPAL -->
   <form action="https://www.paypal.com/donate" method="post" target="_blank">
     <input type="hidden" name="business" value="YOUR_PAYPAL_EMAIL">
     <input type="hidden" name="currency_code" value="USD">
@@ -30,9 +23,6 @@
   </form>
 </section>
 
-<footer>
-  <p>© 2025 BeTogether</p>
-</footer>
-
+<footer>© 2025 BeTogether</footer>
 </body>
 </html>
