--- a/mission.html
+++ b/mission.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Mission</title>
-  <link rel="stylesheet" href="./css/style.css">
+  <title>Mission | BeTogether</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <header>
-  <div class="logo">
-    <img src="./images/logo.png">
-    <span>BeTogether</span>
-  </div>
+  <h2 class="logo">BeTogether</h2>
   <nav>
     <a href="index.html">Home</a>
     <a href="mission.html">Mission</a>
@@ -21,9 +18,13 @@
 
 <section class="page">
   <h1>Our Mission</h1>
-  <p>We support people in need through donations and care.</p>
+  <p>
+    Our mission is to help people in need through donations, care,
+    and community support.
+  </p>
 </section>
 
 <footer>© 2025 BeTogether</footer>
+
 </body>
 </html>
