--- a/par-mums.html
+++ b/par-mums.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Par mums</title>
-  <link rel="stylesheet" href="./css/style.css">
+  <title>Par mums | BeTogether</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <header>
-  <div class="logo">
-    <img src="./images/logo.png">
-    <span>BeTogether</span>
-  </div>
+  <h2 class="logo">BeTogether</h2>
   <nav>
     <a href="index.html">Home</a>
     <a href="mission.html">Mission</a>
@@ -21,9 +18,14 @@
 
 <section class="page">
   <h1>Par mums</h1>
-  <p>BeTogether is a charity built on compassion and transparency.</p>
+  <p>
+    BeTogether is a charity organisation built on kindness,
+    transparency, and unity. Every donation goes directly
+    to helping those in need.
+  </p>
 </section>
 
 <footer>© 2025 BeTogether</footer>
+
 </body>
 </html>
