--- a/donate.html
+++ b/donate.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Donate</title>
-  <link rel="stylesheet" href="./css/style.css">
+  <title>Donate | BeTogether</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <header>
-  <div class="logo">
-    <img src="./images/logo.png">
-    <span>BeTogether</span>
-  </div>
+  <h2 class="logo">BeTogether</h2>
 </header>
 
 <section class="page">
   <h1>Donate</h1>
+  <p>Your support helps change lives.</p>
 
   <form action="https://www.paypal.com/donate" method="post" target="_blank">
     <input type="hidden" name="business" value="YOUR_PAYPAL_EMAIL">
@@ -24,5 +22,6 @@
 </section>
 
 <footer>© 2025 BeTogether</footer>
+
 </body>
 </html>
