--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>BeTogether</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>BeTogether – Charity</title>
+
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
 <header>
-  <h2 class="logo">BeTogether</h2>
+  <div class="logo">BeTogether</div>
   <nav>
     <a href="index.html">Home</a>
     <a href="mission.html">Mission</a>
@@ -18,35 +21,58 @@
 </header>
 
 <section class="hero">
-  <h1>Together, we change lives</h1>
-  <p>Helping people through kindness and action.</p>
-</section>
-
-<section class="cards">
-  <div class="case" onclick="openPopup('anna')">
-    <h3>Anna, 7</h3>
-    <p>Medical support</p>
+  <div class="hero-text">
+    <h2>Together, we can help</h2>
+    <p>
+      BeTogether is a charity focused on kindness, unity, and making a real
+      difference in people’s lives.
+    </p>
+    <a href="donate.html" class="btn">Get Involved</a>
   </div>
 
-  <div class="case" onclick="openPopup('mark')">
-    <h3>Mark, 12</h3>
-    <p>Education support</p>
+  <div class="hero-card">
+    <h3>Why BeTogether?</h3>
+    <p>
+      Because real change happens when people stand together and care for one another.
+    </p>
   </div>
 </section>
+
+<section class="cases">
+  <h2 class="section-title">People We Help</h2>
+
+  <div class="cards">
+    <div class="case-card" onclick="openPopup('anna')">
+      <h3>Anna, 7</h3>
+      <p>Medical support</p>
+    </div>
+
+    <div class="case-card" onclick="openPopup('mark')">
+      <h3>Mark, 12</h3>
+      <p>Education support</p>
+    </div>
+  </div>
+</section>
+
+<section id="donate">
+  <h2 class="section-title">Make an Impact</h2>
+  <p class="donate-text">Every contribution matters.</p>
+  <a href="donate.html" class="btn">Donate Now</a>
+</section>
+
+<footer>
+  <p>© 2025 BeTogether. All rights reserved.</p>
+</footer>
 
 <!-- POPUP -->
 <div id="popup">
-  <div class="popup-box">
+  <div class="popup-content">
     <span class="close" onclick="closePopup()">×</span>
     <h2 id="popupTitle"></h2>
     <p id="popupText"></p>
     <a href="donate.html" class="btn">Donate</a>
   </div>
 </div>
-
-<footer>
-  © 2025 BeTogether
-</footer>
 
 <script src="script.js"></script>
 </body>
