--- a/mission.html
+++ b/mission.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Mission | BeTogether</title>
+  <title>Mission – BeTogether</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <header>
-  <h2 class="logo">BeTogether</h2>
+  <div class="logo">BeTogether</div>
   <nav>
     <a href="index.html">Home</a>
     <a href="mission.html">Mission</a>
@@ -19,12 +19,11 @@
 <section class="page">
   <h1>Our Mission</h1>
   <p>
-    Our mission is to help people in need through donations, care,
-    and community support.
+    Our mission is to support people in need through compassion,
+    donations, and community action.
   </p>
 </section>
 
 <footer>© 2025 BeTogether</footer>
-
 </body>
 </html>
