--- a/par-mums.html
+++ b/par-mums.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Par mums | BeTogether</title>
+  <title>Par mums – BeTogether</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <header>
-  <h2 class="logo">BeTogether</h2>
+  <div class="logo">BeTogether</div>
   <nav>
     <a href="index.html">Home</a>
     <a href="mission.html">Mission</a>
@@ -19,13 +19,11 @@
 <section class="page">
   <h1>Par mums</h1>
   <p>
-    BeTogether is a charity organisation built on kindness,
-    transparency, and unity. Every donation goes directly
-    to helping those in need.
+    BeTogether is a charity organisation built on kindness, transparency,
+    and unity. Every donation helps someone in need.
   </p>
 </section>
 
 <footer>© 2025 BeTogether</footer>
-
 </body>
 </html>
