--- a/donate.html
+++ b/donate.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Donate | BeTogether</title>
+  <title>Donate – BeTogether</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <header>
-  <h2 class="logo">BeTogether</h2>
+  <div class="logo">BeTogether</div>
 </header>
 
 <section class="page">
   <h1>Donate</h1>
-  <p>Your support helps change lives.</p>
+  <p>Your support changes lives.</p>
 
   <form action="https://www.paypal.com/donate" method="post" target="_blank">
     <input type="hidden" name="business" value="YOUR_PAYPAL_EMAIL">
@@ -22,6 +22,5 @@
 </section>
 
 <footer>© 2025 BeTogether</footer>
-
 </body>
 </html>
