--- a/index.html
+++ b/index.html
@@ -5,75 +5,73 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>BeTogether – Charity</title>
 
+  <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+
+  <!-- CSS -->
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-<header>
-  <div class="logo">BeTogether</div>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="mission.html">Mission</a>
-    <a href="par-mums.html">Par mums</a>
-    <a href="donate.html">Donate</a>
-  </nav>
-</header>
+  <header>
+    <h1>BeTogether</h1>
+    <nav>
+      <a href="#about">About</a>
+      <a href="#mission">Mission</a>
+      <a href="#donate">Donate</a>
+    </nav>
+  </header>
 
-<section class="hero">
-  <div class="hero-text">
-    <h2>Together, we can help</h2>
-    <p>
-      BeTogether is a charity focused on kindness, unity, and making a real
-      difference in people’s lives.
-    </p>
-    <a href="donate.html" class="btn">Get Involved</a>
-  </div>
-
-  <div class="hero-card">
-    <h3>Why BeTogether?</h3>
-    <p>
-      Because real change happens when people stand together and care for one another.
-    </p>
-  </div>
-</section>
-
-<section class="cases">
-  <h2 class="section-title">People We Help</h2>
-
-  <div class="cards">
-    <div class="case-card" onclick="openPopup('anna')">
-      <h3>Anna, 7</h3>
-      <p>Medical support</p>
+  <section class="hero">
+    <div class="hero-text">
+      <h2>Together, we can help</h2>
+      <p>
+        BeTogether is a charity focused on kindness, unity, and making a real
+        difference in people’s lives.
+      </p>
+      <a href="#donate" class="btn">Get Involved</a>
     </div>
 
-    <div class="case-card" onclick="openPopup('mark')">
-      <h3>Mark, 12</h3>
-      <p>Education support</p>
+    <div class="hero-card">
+      <h3>Why BeTogether?</h3>
+      <p>
+        Because real change happens when people stand together and care for one another.
+      </p>
     </div>
-  </div>
-</section>
+  </section>
 
-<section id="donate">
-  <h2 class="section-title">Make an Impact</h2>
-  <p class="donate-text">Every contribution matters.</p>
-  <a href="donate.html" class="btn">Donate Now</a>
-</section>
+  <section id="mission">
+    <h2 class="section-title">Our Mission</h2>
 
-<footer>
-  <p>© 2025 BeTogether. All rights reserved.</p>
-</footer>
+    <div class="cards">
+      <div class="card">
+        <h3>Support</h3>
+        <p>Helping communities through donations and volunteering.</p>
+      </div>
 
-<!-- POPUP -->
-<div id="popup">
-  <div class="popup-content">
-    <span class="close" onclick="closePopup()">×</span>
-    <h2 id="popupTitle"></h2>
-    <p id="popupText"></p>
-    <a href="donate.html" class="btn">Donate</a>
-  </div>
-</div>
+      <div class="card">
+        <h3>Care</h3>
+        <p>Providing help and resources where they are needed most.</p>
+      </div>
 
-<script src="script.js"></script>
+      <div class="card">
+        <h3>Hope</h3>
+        <p>Creating a brighter future for everyone.</p>
+      </div>
+    </div>
+  </section>
+
+  <section id="donate">
+    <h2 class="section-title">Make an Impact</h2>
+    <p class="donate-text">Every contribution matters.</p>
+    <button id="donateBtn" class="btn">Donate Now</button>
+  </section>
+
+  <footer>
+    <p>© 2025 BeTogether. All rights reserved.</p>
+  </footer>
+
+  <!-- JavaScript -->
+  <script src="script.js"></script>
 </body>
 </html>
