--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <header>
     <h1>BeTogether</h1>
     <nav>
-      <a href="#about">About</a>
+      <a href="donate.html">About</a>
       <a href="#mission">Mission</a>
       <a href="#donate">Donate</a>
     </nav>
