--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav>
       <a href="donate.html">About</a>
       <a href="#mission">Mission</a>
-      <a href="#donate">Donate</a>
+      <a href="donate.html">Donate</a>
     </nav>
   </header>
 
