--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   <header>
     <h1>BeTogether</h1>
     <nav>
-      <a href="donate.html">About</a>
-      <a href="#mission">Mission</a>
-      <a href="donate.html">Donate</a>
+      <a href="par-mums.html">Par mums</a>
+      <a href="#mission.html">Musu merki</a>
+      <a href="donate.html">Ziedot</a>
     </nav>
   </header>
 
@@ -29,7 +29,7 @@
         BeTogether is a charity focused on kindness, unity, and making a real
         difference in people’s lives.
       </p>
-      <a href="#donate" class="btn">Get Involved</a>
+      <a href="#donate" class="btn">Sazinaties</a>
     </div>
 
     <div class="hero-card">
