Fix link to mission.html in index.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h1>BeTogether</h1>
     <nav>
       <a href="par-mums.html">Par mums</a>
-      <a href="#mission.html">Musu merki</a>
+      <a href="mission.html">Musu merki</a>
       <a href="donate.html">Ziedot</a>
     </nav>
   </header>
