--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="lv">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>BeTogether – Charity</title>
+  <title>BeTogether – Labdarība</title>
 
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -16,62 +16,62 @@
   <header>
     <h1>BeTogether</h1>
     <nav>
+      <a href="index.html">Sākums</a>
+      <a href="mission.html">Misija</a>
       <a href="par-mums.html">Par mums</a>
-      <a href="mission.html">Musu merki</a>
       <a href="donate.html">Ziedot</a>
     </nav>
   </header>
 
   <section class="hero">
     <div class="hero-text">
-      <h2>Together, we can help</h2>
+      <h2>Kopā mēs varam palīdzēt</h2>
       <p>
-        BeTogether is a charity focused on kindness, unity, and making a real
-        difference in people’s lives.
+        BeTogether ir labdarības organizācija, kas koncentrējas uz
+        līdzjūtību, vienotību un reālu palīdzību cilvēku dzīvēs.
       </p>
-      <a href="#donate" class="btn">Sazinaties</a>
+      <a href="donate.html" class="btn">Iesaistīties</a>
     </div>
 
     <div class="hero-card">
-      <h3>Why BeTogether?</h3>
+      <h3>Kāpēc BeTogether?</h3>
       <p>
-        Because real change happens when people stand together and care for one another.
+        Jo patiesas pārmaiņas notiek tad, kad cilvēki stāv kopā
+        un rūpējas viens par otru.
       </p>
     </div>
   </section>
 
-  <section id="mission">
-    <h2 class="section-title">Our Mission</h2>
+  <section class="mission-preview">
+    <h2 class="section-title">Mūsu misija</h2>
 
     <div class="cards">
       <div class="card">
-        <h3>Support</h3>
-        <p>Helping communities through donations and volunteering.</p>
+        <h3>Atbalsts</h3>
+        <p>Palīdzība kopienām ar ziedojumiem un brīvprātīgo darbu.</p>
       </div>
 
       <div class="card">
-        <h3>Care</h3>
-        <p>Providing help and resources where they are needed most.</p>
+        <h3>Rūpes</h3>
+        <p>Resursu un palīdzības nodrošināšana tiem, kam tas visvairāk nepieciešams.</p>
       </div>
 
       <div class="card">
-        <h3>Hope</h3>
-        <p>Creating a brighter future for everyone.</p>
+        <h3>Cerība</h3>
+        <p>Labākas nākotnes veidošana ikvienam.</p>
       </div>
     </div>
   </section>
 
-  <section id="donate">
-    <h2 class="section-title">Make an Impact</h2>
-    <p class="donate-text">Every contribution matters.</p>
-    <button id="donateBtn" class="btn">Donate Now</button>
+  <section class="donate-section">
+    <h2 class="section-title">Veic ieguldījumu</h2>
+    <p class="donate-text">Katrs ziedojums ir svarīgs.</p>
+    <a href="donate.html" class="btn">Ziedot tagad</a>
   </section>
 
   <footer>
-    <p>© 2025 BeTogether. All rights reserved.</p>
+    <p>© 2025 BeTogether. Visas tiesības aizsargātas.</p>
   </footer>
 
-  <!-- JavaScript -->
-  <script src="script.js"></script>
 </body>
 </html>
