--- a/mission.html
+++ b/mission.html
@@ -1,29 +1,43 @@
 <!DOCTYPE html>
-<html>
+<html lang="lv">
 <head>
-  <title>Mission – BeTogether</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Misija – BeTogether</title>
+
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
 <header>
-  <div class="logo">BeTogether</div>
+  <h1>BeTogether</h1>
   <nav>
-    <a href="index.html">Home</a>
-    <a href="mission.html">Mission</a>
+    <a href="index.html">Sākums</a>
+    <a href="mission.html">Misija</a>
     <a href="par-mums.html">Par mums</a>
-    <a href="donate.html">Donate</a>
+    <a href="donate.html">Ziedot</a>
   </nav>
 </header>
 
 <section class="page">
-  <h1>Our Mission</h1>
+  <h2 class="section-title">Mūsu misija</h2>
+
   <p>
-    Our mission is to support people in need through compassion,
-    donations, and community action.
+    BeTogether misija ir sniegt atbalstu cilvēkiem, kuri nonākuši
+    sarežģītās dzīves situācijās. Mēs ticam, ka ar līdzjūtību,
+    vienotību un kopīgu rīcību ir iespējams mainīt dzīves.
+  </p>
+
+  <p>
+    Mūsu mērķis ir nodrošināt palīdzību caur ziedojumiem,
+    sabiedrības iesaisti un atklātu, caurspīdīgu darbību.
   </p>
 </section>
 
-<footer>© 2025 BeTogether</footer>
+<footer>
+  <p>© 2025 BeTogether. Visas tiesības aizsargātas.</p>
+</footer>
+
 </body>
 </html>
