--- a/par-mums.html
+++ b/par-mums.html
@@ -1,29 +1,46 @@
 <!DOCTYPE html>
-<html>
+<html lang="lv">
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Par mums – BeTogether</title>
-  <link rel="stylesheet" href="style.css">
+
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
 <header>
-  <div class="logo">BeTogether</div>
+  <h1>BeTogether</h1>
   <nav>
-    <a href="index.html">Home</a>
-    <a href="mission.html">Mission</a>
+    <a href="index.html">Sākums</a>
+    <a href="mission.html">Misija</a>
     <a href="par-mums.html">Par mums</a>
-    <a href="donate.html">Donate</a>
+    <a href="donate.html">Ziedot</a>
   </nav>
 </header>
 
 <section class="page">
-  <h1>Par mums</h1>
+  <h2 class="section-title">Par mums</h2>
+
   <p>
-    BeTogether is a charity organisation built on kindness, transparency,
-    and unity. Every donation helps someone in need.
+    BeTogether ir neatkarīga labdarības iniciatīva, kas radīta ar mērķi
+    apvienot cilvēkus, kuri vēlas palīdzēt citiem.
+  </p>
+
+  <p>
+    Mēs strādājam godīgi, atbildīgi un ar pārliecību, ka pat neliels
+    atbalsts var radīt lielas pārmaiņas.
+  </p>
+
+  <p>
+    Katrs ziedojums tiek novirzīts tieši tiem, kam tas ir visvairāk nepieciešams.
   </p>
 </section>
 
-<footer>© 2025 BeTogether</footer>
+<footer>
+  <p>© 2025 BeTogether. Visas tiesības aizsargātas.</p>
+</footer>
+
 </body>
 </html>
