--- a/donate.html
+++ b/donate.html
@@ -1,23 +1,48 @@
 <!DOCTYPE html>
-<html>
+<html lang="lv">
 <head>
-  <title>Donate – BeTogether</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Ziedot – BeTogether</title>
+
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
 <header>
-  <div class="logo">BeTogether</div>
+  <h1>BeTogether</h1>
+  <nav>
+    <a href="index.html">Sākums</a>
+    <a href="mission.html">Misija</a>
+    <a href="par-mums.html">Par mums</a>
+    <a href="donate.html">Ziedot</a>
+  </nav>
 </header>
 
 <section class="page">
-  <h1>Donate</h1>
-  <p>Your support changes lives.</p>
+  <h2 class="section-title">Kā ziedot</h2>
 
-  
-  </form>
+  <p>
+    Tavs ziedojums palīdz sniegt reālu atbalstu cilvēkiem, kuriem tas ir nepieciešams.
+  </p>
+
+  <div class="donation-info">
+    <p><strong>Saņēmējs:</strong> BeTogether</p>
+    <p><strong>Konta numurs:</strong> LV00 XXXX 0000 0000 0000</p>
+    <p><strong>Banka:</strong> (Tava banka)</p>
+    <p><strong>Mērķis:</strong> Ziedojums labdarībai</p>
+  </div>
+
+  <p>
+    Ja vēlies uzzināt vairāk par mūsu darbu vai ziedojumu izmantošanu,
+    droši sazinies ar mums.
+  </p>
 </section>
 
-<footer>© 2025 BeTogether</footer>
+<footer>
+  <p>© 2025 BeTogether. Visas tiesības aizsargātas.</p>
+</footer>
+
 </body>
 </html>
