--- a/mission.html
+++ b/mission.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html lang="lv">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
   <title>Misija – BeTogether</title>
-
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -22,21 +19,15 @@
 
 <section class="page">
   <h2 class="section-title">Mūsu misija</h2>
-
   <p>
-    BeTogether misija ir sniegt atbalstu cilvēkiem, kuri nonākuši
-    sarežģītās dzīves situācijās. Mēs ticam, ka ar līdzjūtību,
-    vienotību un kopīgu rīcību ir iespējams mainīt dzīves.
-  </p>
-
-  <p>
-    Mūsu mērķis ir nodrošināt palīdzību caur ziedojumiem,
-    sabiedrības iesaisti un atklātu, caurspīdīgu darbību.
+    Mūsu misija ir palīdzēt cilvēkiem, kuri nonākuši
+    grūtās dzīves situācijās, nodrošinot atbalstu,
+    cerību un reālu palīdzību.
   </p>
 </section>
 
 <footer>
-  <p>© 2025 BeTogether. Visas tiesības aizsargātas.</p>
+  <p>© 2025 BeTogether</p>
 </footer>
 
 </body>
