--- a/par-mums.html
+++ b/par-mums.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html lang="lv">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
   <title>Par mums – BeTogether</title>
-
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -22,24 +19,14 @@
 
 <section class="page">
   <h2 class="section-title">Par mums</h2>
-
   <p>
-    BeTogether ir neatkarīga labdarības iniciatīva, kas radīta ar mērķi
-    apvienot cilvēkus, kuri vēlas palīdzēt citiem.
-  </p>
-
-  <p>
-    Mēs strādājam godīgi, atbildīgi un ar pārliecību, ka pat neliels
-    atbalsts var radīt lielas pārmaiņas.
-  </p>
-
-  <p>
-    Katrs ziedojums tiek novirzīts tieši tiem, kam tas ir visvairāk nepieciešams.
+    BeTogether ir labdarības iniciatīva, kas apvieno cilvēkus,
+    kuri vēlas palīdzēt citiem.
   </p>
 </section>
 
 <footer>
-  <p>© 2025 BeTogether. Visas tiesības aizsargātas.</p>
+  <p>© 2025 BeTogether</p>
 </footer>
 
 </body>
