--- a/donate.html
+++ b/donate.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html lang="lv">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
   <title>Ziedot – BeTogether</title>
-
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -23,25 +20,13 @@
 <section class="page">
   <h2 class="section-title">Kā ziedot</h2>
 
-  <p>
-    Tavs ziedojums palīdz sniegt reālu atbalstu cilvēkiem, kuriem tas ir nepieciešams.
-  </p>
-
-  <div class="donation-info">
-    <p><strong>Saņēmējs:</strong> BeTogether</p>
-    <p><strong>Konta numurs:</strong> LV00 XXXX 0000 0000 0000</p>
-    <p><strong>Banka:</strong> (Tava banka)</p>
-    <p><strong>Mērķis:</strong> Ziedojums labdarībai</p>
-  </div>
-
-  <p>
-    Ja vēlies uzzināt vairāk par mūsu darbu vai ziedojumu izmantošanu,
-    droši sazinies ar mums.
-  </p>
+  <p><strong>Saņēmējs:</strong> BeTogether</p>
+  <p><strong>Konta numurs:</strong> LV00 XXXX 0000 0000 0000</p>
+  <p><strong>Mērķis:</strong> Ziedojums labdarībai</p>
 </section>
 
 <footer>
-  <p>© 2025 BeTogether. Visas tiesības aizsargātas.</p>
+  <p>© 2025 BeTogether</p>
 </footer>
 
 </body>
