--- a/donate.html
+++ b/donate.html
@@ -1,33 +1,4 @@
-<!DOCTYPE html>
-<html lang="lv">
-<head>
-  <meta charset="UTF-8">
-  <title>Ziedot – BeTogether</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-
-<header>
-  <h1>BeTogether</h1>
-  <nav>
-    <a href="index.html">Sākums</a>
-    <a href="mission.html">Misija</a>
-    <a href="par-mums.html">Par mums</a>
-    <a href="donate.html">Ziedot</a>
-  </nav>
-</header>
-
-<section class="page">
-  <h2 class="section-title">Kā ziedot</h2>
-
-  <p><strong>Saņēmējs:</strong> BeTogether</p>
-  <p><strong>Konta numurs:</strong> LV00 XXXX 0000 0000 0000</p>
-  <p><strong>Mērķis:</strong> Ziedojums labdarībai</p>
-</section>
-
-<footer>
-  <p>© 2025 BeTogether</p>
-</footer>
-
-</body>
-</html>
+<h1>Ziedot</h1>
+<p><b>IBAN:</b> LV00BANK000000000</p>
+<p><b>Mērķis:</b> BeTogether atbalsts</p>
+<a href="index.html">← Atpakaļ</a>
