--- a/par-mums.html
+++ b/par-mums.html
@@ -1,33 +1,3 @@
-<!DOCTYPE html>
-<html lang="lv">
-<head>
-  <meta charset="UTF-8">
-  <title>Par mums – BeTogether</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-
-<header>
-  <h1>BeTogether</h1>
-  <nav>
-    <a href="index.html">Sākums</a>
-    <a href="mission.html">Misija</a>
-    <a href="par-mums.html">Par mums</a>
-    <a href="donate.html">Ziedot</a>
-  </nav>
-</header>
-
-<section class="page">
-  <h2 class="section-title">Par mums</h2>
-  <p>
-    BeTogether ir labdarības iniciatīva, kas apvieno cilvēkus,
-    kuri vēlas palīdzēt citiem.
-  </p>
-</section>
-
-<footer>
-  <p>© 2025 BeTogether</p>
-</footer>
-
-</body>
-</html>
+<h1>Par mums</h1>
+<p>BeTogether ir bezpeļņas organizācija, kas apvieno cilvēkus palīdzībai.</p>
+<a href="index.html">← Atpakaļ</a>
