--- a/mission.html
+++ b/mission.html
@@ -1,34 +1,3 @@
-<!DOCTYPE html>
-<html lang="lv">
-<head>
-  <meta charset="UTF-8">
-  <title>Misija – BeTogether</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-
-<header>
-  <h1>BeTogether</h1>
-  <nav>
-    <a href="index.html">Sākums</a>
-    <a href="mission.html">Misija</a>
-    <a href="par-mums.html">Par mums</a>
-    <a href="donate.html">Ziedot</a>
-  </nav>
-</header>
-
-<section class="page">
-  <h2 class="section-title">Mūsu misija</h2>
-  <p>
-    Mūsu misija ir palīdzēt cilvēkiem, kuri nonākuši
-    grūtās dzīves situācijās, nodrošinot atbalstu,
-    cerību un reālu palīdzību.
-  </p>
-</section>
-
-<footer>
-  <p>© 2025 BeTogether</p>
-</footer>
-
-</body>
-</html>
+<h1>Mūsu misija</h1>
+<p>Mēs palīdzam cilvēkiem ar veselības, izglītības un sociālajām vajadzībām.</p>
+<a href="index.html">← Atpakaļ</a>
